--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
   <link rel="stylesheet" href="style.css">
   <title>Weather App</title>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/eruda/2.5.0/eruda.min.js" async></script>
+  <script defer>eruda.init()</script>
 </head>
 
 <body>
